# SMTP-and-POP3-server-in-C

./: .gitignore  CMakeLists.txt  README.md  filehzKTsy  mailuser.c  mypopd.c  mysmtpd.c  server.c  users.txt
starter-code/: mailuser.c  mypopd.c
